@@ -54,4 +54,9 @@ kotlin {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs(
+        "-javaagent:${configurations.testRuntimeClasspath.get().find { it.name.startsWith("byte-buddy-agent") }}",
+        "-XX:+EnableDynamicAgentLoading",
+        "-Xshare:off"
+    )
 }
